tg-2522 mejoras en los chequeos de campos de sector